Some improvements in datatable: add horizontal scrolling, fix newlines in csv export

--- a/csComp/includes/css/csStyles.scss
+++ b/csComp/includes/css/csStyles.scss
@@ -17,6 +17,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
  ::-webkit-scrollbar-track {
     background-color: rgba(0,0,0,.1);
@@ -898,7 +899,7 @@ body,
 .datatable-download-text {
     font-size: 18px;
 }
-#cs-data-table>tbody>tr>td>ul {
+#cs-data-table>tbody>tr>td ul {
     max-height: 21px!important;
     overflow: auto;
 }
@@ -2473,6 +2474,7 @@ input[type="checkbox"] {
     border-bottom: 1px;
     border-bottom-style: groove;
     border-top-style: none;
+    white-space: nowrap;
 }
 .rightpanel-header {
     color: black;
